download CV link updated

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span>Developer</span>
                 </h1>
                 <p>Welcome to my portfolio website! I am Saumitra Kumar, a passionate web developer with a focus on more learning experiences and eventually creating useful web applications. Here, you'll find a brief idea of my personal likings, some highlights of my skills, experience, and creative projects.Feel free to get in touch to discuss collaborations, projects, or any opportunities that excite you. Let's create something extraordinary together!</p>
-                <div><button class="btn-2">Download CV</button></div>
+                <div><a href="https://drive.google.com/file/d/1S6mm1nTgFDYW1GuC3aFdLvzkngjtkEFN/view"><button class="btn-2">Download CV</button></a></div>
             </div>
         </div>
     </header>
